--- a/src/main/webapp/assets/css/venta_producto.css
+++ b/src/main/webapp/assets/css/venta_producto.css
@@ -70,6 +70,7 @@ hr{
 	outline: none;
 }
 
+/* Contenedor imagenes */
 .upload-box {
 	border: 2px dashed #ccc;
 	border-radius: 16px;
@@ -278,4 +279,55 @@ hr{
     border-radius: 10px;
     padding: 20px;
     max-width: 500px;
+}
+
+/* Imagenes del producto */
+.product-image{
+	/* flex: 1 1 200pxcalc(20% - 10px); */
+	max-width: calc(20% - 10px);; 
+    max-height: 350px;
+    width: auto; 
+    height: auto;
+    flex-shrink: 1; 
+}
+
+.image-wrapper {
+    position: relative;
+    flex: 1 1 calc(20% - 10px); /* 5 imágenes por fila */
+    min-width: 150px;
+    max-width: 100%;
+    /* max-height: 350px; */
+  }
+  
+.image-wrapper img {
+    width: 100%;
+    /* max-height: 350px; */
+    height: 200px; /* Altura fija o usa 'auto' */
+    object-fit: contain; /* Muestra toda la imagen sin recortar */
+    display: block;
+   /*  flex-shrink: 1; */
+  }
+  
+.delete-btn {
+    position: absolute;
+    top: 5px;
+    right: 5px;
+    border: none;
+    border-radius: 50%;
+    width: 25px;
+    height: 25px;
+    cursor: pointer;
+  }
+  
+.move-btn{
+	position: relative;
+	bottom: -35px;
+	right: 0px;
+}
+
+.container{
+	display: flex;
+    flex-wrap: wrap;
+   /*  gap: 10px; */
+    justify-content: center;
 }
