--- a/src/main/webapp/assets/css/producto.css
+++ b/src/main/webapp/assets/css/producto.css
@@ -1,20 +1,103 @@
-/* Encabezado de la Pagina EBay */
+/* Encabezado de la Pagina EBay (Con Login) */
+div.user-information-container{
+    position: relative;
+    display: flex;
+    gap: 3px;
+    align-items: center;
+}
 
+#btn-show-user-information{
+    display: flex;
+    align-content: center;
+    justify-content: center;
+    border: none;
+    background-color: transparent;
+}
+
+.menu-dropdown{
+  position: absolute;
+  top: 100%;
+  left: 0;
+  background: white;
+  border-radius: 15px;
+  padding: 1rem;
+  box-shadow: 0 2px 10px rgba(0, 0, 0, 0.2);
+  z-index: 1000;
+  width: 250px;
+  display: none;
+
+  flex-direction: column;
+  justify-content: space-between;
+  gap: 10px;
+}
+
+.user-username{
+    cursor: pointer;
+}
+
+.user-information-container:hover .menu-dropdown {
+  display: flex;
+}
+
+.user-img-name-id-valoration-container{
+    display: flex;
+    align-items: center;
+    gap: 15px;
+}
+
+.user-name-id-valoration-container{
+    display: flex;
+    flex-direction: column;
+    flex: 1;
+}
+
+#user-img{
+    border-radius: 50%;
+    background-color: lightgray;
+    border: 1px dashed gray;
+
+    width: 20%;
+    aspect-ratio: 1/1;
+}
+
+#user-id-valoration{
+    color: darkgray;
+    text-decoration: underline;
+}
+
+.lol1{
+    color: black;
+    text-decoration: solid;
+}
+/* Encabezado de la Pagina EBay (Con Login) */
+
+/* Encabezado de la Pagina EBay (Sin Login) */
 div.header{
     display: flex;
     position: relative;
-    top:0%;
-    left:0%;
+    align-items: center;
+    justify-content: space-between;
+
+    padding-left: 20px;
+    padding-right: 20px;
+    padding-top: 5px;
+    padding-bottom: 5px;
+
     width: 100%;
-    padding-left: 10%;
-    padding-bottom: 0.4%;
-    align-self: center;
+    font-family: Arial, Helvetica, sans-serif;
+}
+
+.ebay-options-header-container{
+    position: relative;
+    display: flex;
+    align-items: center;
+    gap: 50px;
 }
 
 div.searchbar{
     display: flex;
-    border-bottom: solid darkgray 1px;
-    border-top: solid darkgray 1px;
+    border-bottom: solid lightgrey 1px;
+    border-top: solid lightgrey 1px;
     align-items: center;
     align-self: center;
 }
@@ -69,33 +152,16 @@ input.searchInput{
     padding: 10px;
 }
 
-p.Hdelement{
-    position:absolute;
-    top: 1px;
+.btn-Hdelement{
+    display: flex;
+    align-content: center;
+    justify-content: center;
+    border: none;
+    background-color: transparent;
 }
 
 .hov:hover{
     cursor: pointer;
-}
-
-p#location{
-    left:59%;
-}
-
-p#sell{
-    left:65%;
-}
-
-p#favorites{
-    left:70%;
-}
-
-p#menu{
-    left:85%;
-}
-
-p#cart{
-    right:2%;
 }
 
 .background-container-relationated{
@@ -131,14 +197,15 @@ p#cart{
     border: 0px;
     background-color:#f7f7f7;
 }
+/* Encabezado de la Pagina EBay (Sin Login) */
 
 /* Corresponde a HTML Producto (2) */
-
 div#principal-product-container{
     position: relative;
     display: flex;
+    justify-content: space-between;
+    gap: 20px;
     min-height: 100vh;
-    /* background-color: blanchedalmond; */
 }
 
 div#items-container{
@@ -148,50 +215,46 @@ div#items-container{
 
     width: 50%;
     margin: 1.5%;
+    margin-right: 0;
     gap: 10px;
-    /* border: 1px solid black; */
 }
 
 div#images-product{
     position: relative;
     display: flex;
 
-    width: 100%;
     height: 70vh;
 
     gap: 2.5%;
     padding-bottom: 20px;
     border-bottom: 1px solid lightgrey;
-
-    /* background-color: aliceblue; */
 }
 
 div#other-images-product{
     position: relative;
     display: flex;
     flex-direction: column;
+    justify-content: space-between;
 
     width: 12.5%;
-    gap: 5%;
+    /* gap: 5%; */
     height: 100%;
-    /* border: 1px black solid; */
 }
 
 div#active-image-product{
     position: relative;
     display: flex;
 
-    width: 85%;
+    flex: 1;
     aspect-ratio: 1/1;
     background-color: lightgray;
     border: 1px dashed gray;
     border-radius: 2.5%;
-    /* border: 1px darkgray solid; */
 }
 
 div.images-container{
     position: relative;
-    flex: 1;
+    /* width: auto; */
     aspect-ratio: 1 / 1;
 
     background-color: lightgray;
@@ -199,29 +262,36 @@ div.images-container{
     border-radius: 5%;
 }
 
+div.relationated-items-container{
+    position: relative;
+    display: flex;
+    flex-direction: column;
+    overflow-y: auto;
+
+    max-height: 700px;
+    padding-right: 5px;
+}
+
 div.similar-items{
     position: relative;
     display: flex;
     flex-direction: column;
-
-    min-height: 40vh;
-    /* background-color:#0968F6; */
+    margin-bottom: 10px;
 }
 
-div.similar-items-container{
+div.similar-items-information-container{
     position: relative;
     display: flex;
 
     flex: 1;
     gap: 20px;
-    width: 100%;
+    /* width: 100%; */
 }
 
 div.similar-items-img{
     width: 35%;
     aspect-ratio: 1/1;
 
-    /* border: 1px black solid; */
     background-color: lightgray;
     border: 1px dashed gray;
     border-radius: 5%;
@@ -237,17 +307,33 @@ div.similar-items-content{
 
     justify-content:space-around;
     flex: 1;
-    /* border: 1px black solid; */
 }
 
 .product-quality-title{
     color: gray;
+    font-size: x-large;
+    font-weight: 500;
+}
+
+.name{
+    margin-bottom: 10px;
+    font-size: x-large;
+    font-weight: 500;
+}
+
+.similar-items-name{
+    font-size: x-large;
+    font-weight: 500;
 }
 
 .similar-items-information{
-    /* width: 80%; */
     padding-bottom: 5px;
     border-bottom: 1px lightgray solid;
+}
+
+.similar-items-price{
+    font-size: xx-large;
+    font-weight: 500;
 }
 
 #items-information-container{
@@ -255,10 +341,10 @@ div.similar-items-content{
     display: flex;
     flex-direction: column;
 
-    width: 50%;    
     margin-top: 1.5%;
     margin-right: 1.5%;
     margin-bottom: 1.5%;
+    flex: 1;
 }
 
 .items-information{
@@ -275,7 +361,7 @@ div.similar-items-content{
     display: flex;
     align-items: center;
 
-    gap: 2.5%;
+    gap: 15px;
     margin-bottom: 5px;
     padding-bottom: 2.5%;
     border-bottom: 1px lightgray solid;
@@ -305,6 +391,41 @@ div.similar-items-content{
     border-bottom: none;
 }
 
+.principal-title{
+    font-size: large;
+    font-weight: 500;
+}
+
+.principal-title-items-information{
+    font-size: x-large;
+    font-weight: 500;
+}
+
+.product-price{
+    font-size: xx-large;
+    font-weight: 500;
+}
+
+.positive-comentaries{
+    color: #969696;
+    text-decoration: underline;
+}
+
+#product-condition{
+    font-size: large;
+    font-weight: 500;
+}
+
+#quantity-product-number{
+    font-size: large;
+    font-weight: 500;
+}
+
+#quantity-product-container{
+    font-size: large;
+    font-weight: 500;
+}
+
 #quantity-product{
     position: relative;
     display: flex;
@@ -317,9 +438,8 @@ div.similar-items-content{
     align-items: center;
     justify-content: center;
 
-    font-size: x-large;
+    font-size: large;
     background-color: lightgray;
-    /* border: 1px black solid; */
 
     border-radius: 10%;
     padding-left: 1.5%;
@@ -331,10 +451,153 @@ div.similar-items-content{
     padding-bottom: 1.5%;
 
     background-color: #0968F6;
-    font-size: x-large;
+    font-size: large;
     border: none;
 
     margin-bottom: 2.5%;
-    border-radius: 10px;
-    color: white
+    border-radius: 60px;
+    color: white;
+    font-weight: 400;
+}
+
+#btn-add-to-shopping-cart{
+    background-color: white;
+    color: #0968F6;
+    border: 1px solid #0968F6;
+}
+
+#btn-add-to-favorites-list{
+    background-color: white;
+    color: #0968F6;
+    border: 1px solid #0968F6;
+    margin-bottom: 20px;
+}
+
+#product-characteristics-container{
+    position: relative;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+
+    gap: 10px;
+
+    padding-top: 10px;
+    padding-bottom: 10px;
+    border-top: 1px solid lightgray;
+    border-bottom: 1px solid lightgray;
+}
+
+#about-item-title{
+    font-size: large;
+    font-weight: 700;
+}
+
+#id-item{
+    color: #969696;
+    font-size: medium;
+}
+
+.product-characteristics-header{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.item-characteristics-container1{
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+
+    gap: 10px;
+}
+
+#item-characteristics-title{
+    font-size: x-large;
+    font-weight: 700;
+}
+
+#item-characteristics-container2{
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    gap: 5px;
+}
+
+.item-char-container-molde{
+    display: flex;
+    justify-content: space-between;
+    font-size: medium;
+    gap: 5%;
+}
+
+.item-char-name{
+    color: #969696;
+    font-weight: 500;
+    width: 35%;
+}
+
+.item-char-value{
+    flex: 1;
+}
+
+#item-comentaries-container{
+    position: relative;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+
+    gap: 5px;
+    padding-top: 10px;
+    padding-bottom: 10px;
+    border-bottom: 1px lightgray solid;
+}
+
+.items-comentaries-title{
+    font-size: x-large;
+    font-weight: 700;
+}
+
+.items-comentaries{
+    position: relative;
+    display: flex;
+    flex-direction: column;
+    overflow-y: auto;
+
+    max-height: 280px;
+    padding-right: 5px;
+    gap: 20px;
+}
+
+.item-comentary-molde{
+    position: relative;
+    display: flex;
+    flex-direction: column;
+    gap: 5px;
+    padding-right: 5px;
+}
+
+.item-comentary-img-name{
+    position: relative;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    gap: 10px;
+}
+
+#item-comentary-img{
+    border-radius: 50%;
+    background-color: lightgray;
+    border: 3px dashed #969696;
+
+    margin-left: 5px;
+
+    width: 5%;
+    aspect-ratio: 1/1;
+
+    overflow: hidden;
+    object-fit: cover;
+}
+
+.item-comentary-data{
+    text-align: justify;
 }
