--- a/src/main/webapp/assets/css/L_F.css
+++ b/src/main/webapp/assets/css/L_F.css
@@ -287,6 +287,13 @@ input.searchInput{
   margin-right: 2.5%;
 }
 
+.favorites-list-img img{
+	width: 100%;
+    height: 100%;
+    object-fit: cover;        
+    object-position: center;
+}
+
 .favorites-list-information{
   position: relative;
   display: flex;
@@ -354,6 +361,11 @@ input.searchInput{
   border-radius: 20px;
 }
 
+#btn-more-seller-products:hover{
+  background-color: #0968F6 ;
+  color: white;
+}
+
 #btn-similar-items{
   background-color: white;
   border:1px solid #0968F6;
@@ -363,3 +375,10 @@ input.searchInput{
 /* #product-grid{
   height: auto;
 } */
+
+.favorites-list-molde:hover{
+	cursor: pointer;
+	transform: translateY(-5px); /* Se "levanta" 5px hacia arriba */
+  	box-shadow: 0 8px 16px rgba(0, 0, 0, 0.2); /* Sombra más pronunciada */
+  	border: solid black 1px;
+}
