--- a/src/main/webapp/assets/css/carro_de_compras.css
+++ b/src/main/webapp/assets/css/carro_de_compras.css
@@ -201,19 +201,40 @@ div.sales-person-name2{
 }
 
 div.sales-person-img2{
-    border-radius: 50%;
+   /*  border-radius: 50%;
     background-color: lightgray;
     border: 1px dashed gray;
 
     height: 100%;
     aspect-ratio: 1/1;
     overflow: hidden;
-    object-fit: cover;
+    object-fit: cover; */
+    
+    width: 60px; 
+    height: 60px;
+    border-radius: 50%;
+    background-color: lightgray;
+    border: 1px dashed gray;
+    overflow: hidden;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+div.sales-person-img2 img{
+     width: 100%;
+    height: 100%;
+    object-fit: cover;        
+    object-position: center;
 }
 
 .sellers-name{
     /* text-decoration: underline; */
     font-size: large;
+}
+
+.sellers-name:hover{
+    text-decoration: underline;
 }
 
 .positive-comentaries{
@@ -244,6 +265,13 @@ div.product-image{
     border: 1px dashed gray;
 }
 
+div.product-image img{
+    width: 100%;
+    height: 100%;
+    object-fit: cover;        
+    object-position: center
+}
+
 .producto-condition-name{
     position: relative;
     display: flex;
@@ -258,6 +286,10 @@ div.product-image{
 
 .product-information2{
     font-size: larger;
+}
+
+.product-information2:hover{
+    text-decoration: underline;
 }
 
 .product-condition{
@@ -415,4 +447,11 @@ div.product-image{
     border: none;
     color: white;
     font-size: x-large;
+}
+
+#product-card:hover{
+	cursor: pointer;
+	transform: translateY(-5px); /* Se "levanta" 5px hacia arriba */
+  	box-shadow: 0 8px 16px rgba(0, 0, 0, 0.2); /* Sombra más pronunciada */
+  	border: solid black 1px;
 }
