--- a/src/main/webapp/assets/css/header.css
+++ b/src/main/webapp/assets/css/header.css
@@ -176,5 +176,15 @@ button.search:hover{
 }
 /* Encabezado de la Pagina EBay (Sin Login) */
 
+/* input.searchInput{
+    width: 45%;
+    height: 100%;
+    border-radius: 40px;
+    align-self: center;
+    border: solid black 3px;
+    padding: 15px;
+    font-size: 20px;
+
+} */
 
 
