--- a/src/main/webapp/assets/css/index.css
+++ b/src/main/webapp/assets/css/index.css
@@ -1,16 +1,24 @@
-div.header{
+/* div.header{
+	display: flex;
     position: relative;
+    align-items: center;
+    justify-content: space-between;
+    
     top:0%;
     left:0%;
-    width: 100%;
-    padding-left: 10%;
-    padding-bottom: 0.4%;
+    padding-left: 20px;
+    padding-right: 20px;
+    padding-top: 5px;
+    padding-bottom: 5px;
+    
     height: 10%;
+    width: 100%;
+    font-family: Arial,Helvetica,sans-serif;
     align-self: center;
 
-}
+} */
 
-div.searchbar{
+/* div.searchbar{
     display: flex;
     border-bottom: solid darkgray 1px;
     border-top: solid darkgray 1px;
@@ -18,7 +26,7 @@ div.searchbar{
     align-items: center;
 
     align-self: center;
-}
+} */
 button.buyCtg{
     align-items: center;
     background-color: initial;
@@ -35,7 +43,7 @@ button.buyCtg{
     padding-left: 5%;
 }
 
-button.search{
+/* button.search{
     color: white;
     background-color: #0968F6;
     border-radius: 30px;
@@ -48,7 +56,7 @@ button.search{
 }
 button.search:hover{
     background-color: blue;
-}
+} */
 
 h4.title{
     position: relative;
@@ -57,8 +65,8 @@ h4.title{
     font-weight: bold;
 }
 
-div.search-container{
-    width: 50vw;
+/* div.search-container{
+    width: 40vw;
     height: 5vh;
     border-radius: 40px;
     align-self: center;
@@ -67,20 +75,13 @@ div.search-container{
     border: solid black 3px;
 
     font-size: 20px;
-}
+} */
 
 div.categoriesText{
     display: flex;
     /* padding-left: 15%; */
 }
-div.categories{
-    display: flex;
-    position: relative;
-    left: 10%;
-    padding-left: 1%;
-    padding-bottom: 10%;
-    scroll-behavior: smooth;
-}
+
 
 .fill{
     padding: 10px;
@@ -248,6 +249,44 @@ p.card-title:hover{
     height: 100%;
     align-self: flex-end;
 
+}
+
+div.categories{
+    /* display: flex;
+    position: relative;
+    left: 10%;
+    padding-left: 1%;
+    padding-bottom: 10%;
+    scroll-behavior: smooth; */
+    
+    display: flex;
+	gap: 32px;
+	flex-wrap: wrap;
+	justify-content: center;
+}
+
+.category {
+  text-align: center;
+  cursor: pointer;
+}
+
+.category img {
+  width: 120px;
+  height: 120px;
+  border-radius: 50%;
+  background-color: #f5f5f5;
+  object-fit: contain;  /* asegura que la imagen entre completa */
+  padding: 10px;
+  transition: background 0.3s ease;
+}
+
+.category img:hover {
+  background-color: #e0e0e0; /* gris al pasar el mouse */
+}
+
+.category p {
+  margin-top: 10px;
+  font-weight: 500;
 }
 
 
