--- a/src/main/webapp/assets/css/lista_productos.css
+++ b/src/main/webapp/assets/css/lista_productos.css
@@ -202,6 +202,7 @@ button.btn-square-for-filters{
     width: 80%;
     margin: 10px;
     margin-left: 10px;
+    padding-left: 200px;
 }
 
 .container-products-by-individual{
@@ -227,10 +228,16 @@ button.btn-square-for-filters{
 }
 
 .container-imagen-product img{
-   	width: 100%;
+   	/* width: 100%;
     height: 100%;
     object-fit: cover;        
-    object-position: center;
+    object-position: center; */
+    
+    width: 200px;       /* tamaño fijo de ancho */
+	height: 200px;      /* tamaño fijo de alto */
+	object-fit: cover; /* ajusta la imagen sin deformarla */
+	display: block;
+	margin: auto;   
 }
 
 .container-product-condition{
